<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".ui.columndivizion.ColumnDivisionFragment">

    <TextView
        android:id="@+id/tvDivided"
        app:layout_constraintTop_toTopOf="@id/etDivided"
        app:layout_constraintBottom_toBottomOf="@id/etDivided"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/divided"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="80dp"/>
    <TextView
        app:layout_constraintTop_toTopOf="@id/etDivisor"
        app:layout_constraintBottom_toBottomOf="@id/etDivisor"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/divisor"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="80dp"/>
    <EditText
        android:id="@+id/etDivided"
        app:layout_constraintStart_toEndOf="@id/tvDivided"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/enter_the_divided_number"
        android:layout_margin="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <EditText
        android:id="@+id/etDivisor"
        app:layout_constraintStart_toEndOf="@id/tvDivided"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDivided"
        android:hint="@string/enter_the_divisor"
        android:layout_margin="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <Button
        android:id="@+id/btnEquals"
        app:layout_constraintTop_toBottomOf="@id/etDivisor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/equals_sign"
        android:textSize="20sp"
        android:minWidth="150dp"
        android:minHeight="60dp"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        app:layout_constraintTop_toTopOf="@id/tvResult"
        app:layout_constraintBottom_toBottomOf="@id/tvResult"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/result"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="80dp"/>
    <TextView
        app:layout_constraintTop_toTopOf="@id/tvRemain"
        app:layout_constraintBottom_toBottomOf="@id/tvRemain"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/remain"
        android:layout_margin="8dp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="80dp"/>
    <TextView
        android:id="@+id/tvResult"
        app:layout_constraintTop_toBottomOf="@id/btnEquals"
        app:layout_constraintStart_toEndOf="@id/tvDivided"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="80dp"
        tools:text="151"/>
    <TextView
        android:id="@+id/tvRemain"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        app:layout_constraintStart_toEndOf="@id/tvDivided"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minWidth="80dp"
        tools:text="152"/>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/tvRemain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/tvColumn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:fontFamily="monospace"
            tools:text="@string/enter_both_numbers_then_press_equals"/>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>