<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.factorization.FactorizationFragment">


    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbFactorize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minWidth="120dp"
            android:text="@string/factorize" />
        <RadioButton
            android:id="@+id/rbListOfPrimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:text="@string/get_list_of_primes"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edNumber"
        app:layout_constraintBottom_toBottomOf="@id/edNumber"
        android:text="@string/number"
        android:minWidth="80dp"/>

    <EditText
        android:id="@+id/edNumber"
        android:inputType="number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rbGroup"
        app:layout_constraintStart_toEndOf="@id/tvNumber"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_a_number"/>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edNumber"
        android:text="@string/calculate"
        android:minWidth="150dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalculate"
        tools:layout_editor_absoluteX="8dp">
        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="80dp"
            android:textAlignment="textStart"
            android:textSize="18sp"
            tools:text="1546" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>